fixed mobile spacing

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -994,7 +994,8 @@
   }
 
   .key_feature_section {
-    margin-top: 50px;
+    margin-top: 0;
+    padding-top: 0;
   }
 
   .key_innner {
